# meshcortex

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: README.md
experiments/: llama_request.py  mcp_agent.py  mcp_poc.py  mcp_server.py  payload.json  request_curl.ps1
