[project]
name = "meshcortex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["orchestrator", "gpu-node"]

[tool.uv]
package = false

[tool.uv.sources]
orchestrator = { workspace = true }
gpu-node = { workspace = true }

[tool.uv.workspace]
members = ["packages/orchestrator", "packages/backends/gpu-node"]
